{
    "name": "MarioActions",
    "maps": [
        {
            "name": "gameplay",
            "id": "fdf4c486-88f1-4d2a-b87d-06c7fa5b9e1a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "4b64f05e-3090-4c74-b07e-eaf4fdf80897",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0f5539ab-7e67-4442-8ba0-ef96d0c92b1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpHold",
                    "type": "Button",
                    "id": "169cfc5e-b4b4-452c-9e84-839f81e30f47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.3)",
                    "initialStateCheck": false
                },
                {
                    "name": "click",
                    "type": "Button",
                    "id": "9875bd64-c12e-4f53-944c-9048692221b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "point",
                    "type": "Value",
                    "id": "ae674e04-f63d-4bed-8c2d-c019114ee8f3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aab3b210-c8a4-4bcb-bb84-8a9bcb0879b0",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "MarioActions",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "ab278e6d-61c7-4f87-97d5-8144d9681609",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "fc7efce7-ab2c-45c1-8b10-2e5094865bf0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c02d6278-c522-4d92-8601-f5fa5f45177d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis (Arrow)",
                    "id": "36b4487a-50e1-489a-abff-8c25d1e4bf2f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c1b22a79-d9e9-4a8a-84c6-8bd674e210a6",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "561b9d0e-2a0a-4464-b7f3-f99d35858857",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "378f3267-9483-4d85-9cb1-6672a8f36cca",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "MarioActions",
                    "action": "JumpHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3f0413f-c48b-47d7-8e31-9317178c584d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MarioActions",
                    "action": "click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "e9bdc642-4173-491c-b764-00c6fccc1a70",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "point",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "896f5f96-aa0a-4af2-a287-d72bdf8f62a0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MarioActions",
                    "action": "point",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "75d778b9-59cf-457c-824d-5b07bcfe784c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MarioActions",
                    "action": "point",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MarioActions",
            "bindingGroup": "MarioActions",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}